RESOLVED FIXED138320
Fix the !ENABLE(VIDEO) build after r175279
https://bugs.webkit.org/show_bug.cgi?id=138320
Summary Fix the !ENABLE(VIDEO) build after r175279
Csaba Osztrogonác
Reported 2014-11-03 12:28:51 PST
In file included from ../../Source/WebCore/dom/Document.cpp:41:0: ../../Source/WebCore/page/ChromeClient.h:343:91: error: 'WebCore::HTMLMediaElement::VideoFullscreenMode' has not been declared The problem is that VideoFullscreenMode is defined in Source/WebCore/html/HTMLMediaElement.h inside ENABLE(VIDEO) guard (the whole header and the whole class is guarded), but used everywhere without any guard.
Attachments
Patch (1.21 KB, patch)
2014-11-03 12:41 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-11-03 12:41:30 PST
WebKit Commit Bot
Comment 2 2014-11-03 14:14:30 PST
Comment on attachment 240869 [details] Patch Clearing flags on attachment: 240869 Committed r175489: <http://trac.webkit.org/changeset/175489>
WebKit Commit Bot
Comment 3 2014-11-03 14:14:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.