Fix the !ENABLE(VIDEO) build after r175279 https://bugs.webkit.org/show_bug.cgi?id=138320

Reviewed by Jer Noble.

* page/ChromeClient.h:


Canonical link: https://commits.webkit.org/156160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175489 268f45cc-cd09-0410-ab3c-d52691b4dbfc